# capsule

./: .gitignore  Cargo.toml  Makefile.toml  build.rs  shell.nix
src/: '  main.rs  netclient.rs  player.rs
wasm/: index.html
