[package]
name = "capsule"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
#cpal = { version = "*", features = ["jack"] }
bevy = {version = "0.6"}
bevy_egui = "0.11"
wasm-bindgen = {version = "0.2.79"}
web-sys = {version = "0.3.55", features = ["WebSocket", "ErrorEvent", "MessageEvent", "BinaryType", "ProgressEvent", "Blob", "FileReader"]}
js-sys = {version = "0.3.55"}
bevy_networking_turbulence = { version = "0.4.1", default-features = false, features = ["use-webrtc"] }
cfg-if = {version = "1.0.0"}
bevy_framepace = {version = "0.3.0"}

[target.'cfg(target_os = "linux")'.dev-dependencies]
bevy = { version = "0.6.1", default-features = false}

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]

# NOTE: you must manually install https://github.com/michaeleisel/zld on mac. you can easily do this with the "brew" package manager:
# `brew install michaeleisel/zld/zld`
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld", "-Zshare-generics=y"]

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
